# todome

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  README_EN.md  bun.lockb  bunfig.toml  github_sync.py  package.json  pyproject.toml  server.py  server_github.py  server_retro.py  server_state.py  server_ws.py  start.sh  test.sh  tsconfig.json
.claude/: launch.json  settings.local.json
.claude/agents/: e2e-runner.md  server-navigator.md  type-lint-runner.md
.claude/rules/: frontend.md  server.md  testing.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
client/: AGENTS.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client/public/: manifest.webmanifest  sw.js
client/src/: holiday.test.ts  holiday.ts  main.tsx  style.css  theme.ts  types.test.ts  types.ts  viewState.ts
data/: ai_config.json  app_config.json  caldav_config.json
docs/: data-model.md  github-sync-compliance.md  index.html  life-log-spec.md  retrospective-mode-spec.md  smartphone-access.md  special-thanks.md
docs/manual/: README.md  index.html
e2e/: package-lock.json  package.json  playwright.config.ts  playwright.manual.config.ts
e2e/fixtures/: helpers.ts
e2e/manual/: animations.spec.ts  capture.spec.ts  frames-to-webp.js  seed.ts  ws-harness.js
e2e/tests/: chat.spec.ts  goals.spec.ts  kanban.spec.ts  navigation.spec.ts  profile.spec.ts  retro.spec.ts  (+1 more)
server/: AGENTS.md  config.ts  db.ts  index.ts  state.ts  test-setup.ts  types.ts
tests/: test_server_helpers.py  test_server_ws.py
(+179 files in other folders)
