[project]
name = "todome"
version = "0.1.0"
description = "todome — Kanban TODO management app with AI agent powered by Claude Agent SDK"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "claude-agent-sdk>=0.1.50",
    "fastapi>=0.115.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
    "watchfiles>=0.21.0",
    "websockets>=13.0",
]

[project.scripts]
kanban-ai = "server:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
